# batstat

./: .gitignore  README.md  bat.py  batstat  batstat.py  batstat.py.backup  hello.py  pyproject.toml
old/: batstat  batstat.fish
scripts/fish/: gacp.fish
src/batstat/: __init__.py  __main__.py  batstat.py
