[project]
name = "batstat"
version = "0.1.0"
description = "A beautiful battery status display for macOS using ioreg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.1.3",
]

[project.scripts]
batstat = "batstat.batstat:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
