[project]
name = "batstat"
version = "0.2.0"
description = "A beautiful battery status display for macOS and USB-connected iOS devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
batstat = "batstat:main"

[tool.uv.sources]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
